--- a/PlayAround/GameData.plist
+++ b/PlayAround/GameData.plist
@@ -8,29 +8,6 @@
 		<dict>
 			<key>NPC</key>
 			<dict>
-				<key>SurlyVillager</key>
-				<dict>
-					<key>Front</key>
-					<string></string>
-					<key>Back</key>
-					<string></string>
-					<key>Left</key>
-					<string></string>
-					<key>Right</key>
-					<string></string>
-					<key>InitialSpeech</key>
-					<array>
-						<string>Hey stranger did you hear about the disturbance at the cave last night?</string>
-						<string>My brother heard something strange at the cave last night.</string>
-					</array>
-					<key>ReminderSpeech</key>
-					<array>
-						<string>Did you ever get around to scratching my balls?</string>
-						<string>Tick tock, my balls ain&apos;t gonna scratch themselves.</string>
-					</array>
-					<key>Range</key>
-					<string>SomeDummySprite</string>
-				</dict>
 				<key>Villager1</key>
 				<dict>
 					<key>Front</key>
@@ -41,6 +18,8 @@
 					<string></string>
 					<key>Right</key>
 					<string></string>
+					<key>BaseImage</key>
+					<string>VillagerBase</string>
 					<key>InitialSpeech</key>
 					<array>
 						<string>Hey stranger did you hear about the disturbance at the cave last night?</string>
@@ -52,7 +31,7 @@
 						<string>Tick tock, my balls ain&apos;t gonna scratch themselves.</string>
 					</array>
 					<key>Range</key>
-					<string>SomeDummySprite</string>
+					<string>VillagerRange</string>
 				</dict>
 			</dict>
 		</dict>
