--- a/PlayAround/GameData.plist
+++ b/PlayAround/GameData.plist
@@ -8,7 +8,7 @@
 		<dict>
 			<key>NPC</key>
 			<dict>
-				<key>Villager1</key>
+				<key>DungeonVillager1</key>
 				<dict>
 					<key>Front</key>
 					<string>VillagerFront</string>
@@ -44,6 +44,35 @@
 			<key>NPC</key>
 			<dict>
 				<key>Villager1</key>
+				<dict>
+					<key>Front</key>
+					<string>VillagerFront</string>
+					<key>Back</key>
+					<string>VillagerBack</string>
+					<key>Left</key>
+					<string>VillagerLeft</string>
+					<key>Right</key>
+					<string>VillagerRight</string>
+					<key>BaseImage</key>
+					<string>VillagerBase</string>
+					<key>InitialSpeech</key>
+					<array>
+						<string>Hey stranger did you hear about the disturbance at the cave last night?</string>
+						<string>My brother heard something strange at the cave last night.</string>
+					</array>
+					<key>ReminderSpeech</key>
+					<array>
+						<string>Did you ever get around to scratching my balls?</string>
+						<string>Tick tock, my balls ain&apos;t gonna scratch themselves.</string>
+					</array>
+					<key>Range</key>
+					<string>VillagerRange</string>
+					<key>Icon</key>
+					<string>VillagerIcon</string>
+					<key>Collidable</key>
+					<true/>
+				</dict>
+				<key>Villager2</key>
 				<dict>
 					<key>Front</key>
 					<string>VillagerFront</string>
