--- a/PlayAround/GameData.plist
+++ b/PlayAround/GameData.plist
@@ -4,43 +4,34 @@
 <dict>
 	<key>Levels</key>
 	<dict>
-		<key>Dungeon</key>
-		<dict>
-			<key>NPC</key>
-			<dict>
-				<key>DungeonVillager1</key>
-				<dict>
-					<key>Front</key>
-					<string>VillagerFront</string>
-					<key>Back</key>
-					<string>VillagerBack</string>
-					<key>Left</key>
-					<string>VillagerLeft</string>
-					<key>Right</key>
-					<string>VillagerRight</string>
-					<key>BaseImage</key>
-					<string>VillagerBase</string>
-					<key>InitialSpeech</key>
-					<array>
-						<string>Wouldn&apos;t you like to see something fun?</string>
-						<string>I have something fun to show you.</string>
-					</array>
-					<key>ReminderSpeech</key>
-					<array>
-						<string>Did you ever get around to scratching my balls?</string>
-						<string>Tick tock, my balls ain&apos;t gonna scratch themselves.</string>
-					</array>
-					<key>Range</key>
-					<string>VillagerRange</string>
-					<key>Icon</key>
-					<string>VillagerIcon</string>
-					<key>Collidable</key>
-					<true/>
-				</dict>
-			</dict>
-		</dict>
 		<key>Grassland</key>
 		<dict>
+			<key>Properties</key>
+			<dict>
+				<key>Rewards</key>
+				<dict>
+					<key>Class</key>
+					<string></string>
+					<key>Currency</key>
+					<string></string>
+					<key>Inventory</key>
+					<string></string>
+					<key>Projectile / Weapon</key>
+					<string></string>
+					<key>Health</key>
+					<string></string>
+				</dict>
+				<key>Clear</key>
+				<dict/>
+				<key>DisableAttack</key>
+				<false/>
+				<key>CameraOffset</key>
+				<string>{ 0 , 0 }</string>
+				<key>ContinuePoint</key>
+				<true/>
+				<key>CameraFollowsPlayer</key>
+				<true/>
+			</dict>
 			<key>NPC</key>
 			<dict>
 				<key>Villager1</key>
@@ -88,6 +79,67 @@
 					<array>
 						<string>Hey stranger did you hear about the disturbance at the cave last night?</string>
 						<string>My brother heard something strange at the cave last night.</string>
+					</array>
+					<key>ReminderSpeech</key>
+					<array>
+						<string>Did you ever get around to scratching my balls?</string>
+						<string>Tick tock, my balls ain&apos;t gonna scratch themselves.</string>
+					</array>
+					<key>Range</key>
+					<string>VillagerRange</string>
+					<key>Icon</key>
+					<string>VillagerIcon</string>
+					<key>Collidable</key>
+					<true/>
+				</dict>
+			</dict>
+		</dict>
+		<key>Dungeon</key>
+		<dict>
+			<key>Properties</key>
+			<dict>
+				<key>Rewards</key>
+				<dict>
+					<key>Class</key>
+					<string></string>
+					<key>Currency</key>
+					<string></string>
+					<key>Inventory</key>
+					<string></string>
+					<key>Projectile / Weapon</key>
+					<string></string>
+					<key>Health</key>
+					<string></string>
+				</dict>
+				<key>Clear</key>
+				<dict/>
+				<key>DisableAttack</key>
+				<false/>
+				<key>CameraOffset</key>
+				<string>{ 0 , 0 }</string>
+				<key>ContinuePoint</key>
+				<false/>
+				<key>CameraFollowsPlayer</key>
+				<true/>
+			</dict>
+			<key>NPC</key>
+			<dict>
+				<key>DungeonVillager1</key>
+				<dict>
+					<key>Front</key>
+					<string>VillagerFront</string>
+					<key>Back</key>
+					<string>VillagerBack</string>
+					<key>Left</key>
+					<string>VillagerLeft</string>
+					<key>Right</key>
+					<string>VillagerRight</string>
+					<key>BaseImage</key>
+					<string>VillagerBase</string>
+					<key>InitialSpeech</key>
+					<array>
+						<string>Wouldn&apos;t you like to see something fun?</string>
+						<string>I have something fun to show you.</string>
 					</array>
 					<key>ReminderSpeech</key>
 					<array>
