Added player class and numerous values

--- a/PlayAround/GameData.plist
+++ b/PlayAround/GameData.plist
@@ -2,6 +2,100 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>Class</key>
+	<dict>
+		<key>Starting</key>
+		<dict>
+			<key>Animation</key>
+			<dict>
+				<key>Front</key>
+				<dict>
+					<key>Walk</key>
+					<string>WalkForward</string>
+					<key>Melee</key>
+					<string>FrontAttack</string>
+					<key>Projectile</key>
+					<string></string>
+					<key>Hurt</key>
+					<string></string>
+					<key>Idle</key>
+					<string>IdleFront</string>
+				</dict>
+				<key>Right</key>
+				<dict>
+					<key>Walk</key>
+					<string>WalkRight</string>
+					<key>Melee</key>
+					<string>RightAttack</string>
+					<key>Projectile</key>
+					<string></string>
+					<key>Hurt</key>
+					<string></string>
+					<key>Idle</key>
+					<string>IdleRight</string>
+				</dict>
+				<key>Left</key>
+				<dict>
+					<key>Walk</key>
+					<string>WalkLeft</string>
+					<key>Melee</key>
+					<string>LeftAttack</string>
+					<key>Projectile</key>
+					<string></string>
+					<key>Hurt</key>
+					<string></string>
+					<key>Idle</key>
+					<string>IdleLeft</string>
+				</dict>
+				<key>Back</key>
+				<dict>
+					<key>Walk</key>
+					<string>WalkBackward</string>
+					<key>Melee</key>
+					<string>BackAttack</string>
+					<key>Projectile</key>
+					<string></string>
+					<key>Hurt</key>
+					<string></string>
+					<key>Idle</key>
+					<string>IdleBack</string>
+				</dict>
+			</dict>
+			<key>Sounds</key>
+			<dict/>
+			<key>Melee</key>
+			<dict>
+				<key>Damage</key>
+				<string>0</string>
+				<key>Size</key>
+				<string>{100,100}</string>
+				<key>ScaleTo</key>
+				<integer>3</integer>
+				<key>Animation</key>
+				<string>Attacking</string>
+				<key>TimeBetweenUse</key>
+				<integer>0</integer>
+			</dict>
+			<key>Ranged</key>
+			<dict>
+				<key>Projectile</key>
+				<string></string>
+				<key>TimeBetweenUse</key>
+				<integer>0</integer>
+			</dict>
+			<key>Stats</key>
+			<dict>
+				<key>Speed</key>
+				<real>0.5</real>
+				<key>Health</key>
+				<integer>20</integer>
+				<key>Armor</key>
+				<integer>20</integer>
+				<key>Immunity</key>
+				<integer>1</integer>
+			</dict>
+		</dict>
+	</dict>
 	<key>Levels</key>
 	<dict>
 		<key>Grassland</key>
