projectile support, part 2

--- a/PlayAround/GameData.plist
+++ b/PlayAround/GameData.plist
@@ -6,6 +6,8 @@
 	<dict>
 		<key>Sword</key>
 		<dict>
+			<key>ZPosition</key>
+			<integer>200</integer>
 			<key>Image</key>
 			<string>Sword</string>
 			<key>Animation</key>
