--- a/PlayAround/GameData.plist
+++ b/PlayAround/GameData.plist
@@ -2,6 +2,23 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>XP</key>
+	<array>
+		<dict>
+			<key>Name</key>
+			<string>Level 1</string>
+			<key>Max</key>
+			<integer>200</integer>
+		</dict>
+		<dict>
+			<key>Rewards</key>
+			<dict/>
+			<key>Name</key>
+			<string>Level 1</string>
+			<key>Max</key>
+			<integer>200</integer>
+		</dict>
+	</array>
 	<key>Projectiles</key>
 	<dict>
 		<key>Sword</key>
