--- a/PlayAround/GameData.plist
+++ b/PlayAround/GameData.plist
@@ -2,6 +2,429 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>Enemies</key>
+	<dict>
+		<key>EvilClone</key>
+		<dict>
+			<key>Animation</key>
+			<dict>
+				<key>Back</key>
+				<dict>
+					<key>Walk</key>
+					<string>WalkBack</string>
+					<key>Melee</key>
+					<string>BackAttack</string>
+					<key>Ranged</key>
+					<string>BackThrowing</string>
+					<key>Hurt</key>
+					<string>BackHurt</string>
+					<key>Idle</key>
+					<string>IdleBack</string>
+					<key>Dying</key>
+					<string>Dying</string>
+				</dict>
+				<key>Front</key>
+				<dict>
+					<key>Walk</key>
+					<string>WalkFront</string>
+					<key>Melee</key>
+					<string>FrontAttack</string>
+					<key>Ranged</key>
+					<string>FrontThrowing</string>
+					<key>Hurt</key>
+					<string>FrontHurt</string>
+					<key>Idle</key>
+					<string>IdleFront</string>
+					<key>Dying</key>
+					<string>Dying</string>
+				</dict>
+				<key>Right</key>
+				<dict>
+					<key>Walk</key>
+					<string>WalkRight</string>
+					<key>Melee</key>
+					<string>RightAttack</string>
+					<key>Ranged</key>
+					<string>RightThrowing</string>
+					<key>Hurt</key>
+					<string>RightHurt</string>
+					<key>Idle</key>
+					<string>IdleRight</string>
+					<key>Dying</key>
+					<string>Dying</string>
+				</dict>
+				<key>Left</key>
+				<dict>
+					<key>Walk</key>
+					<string>WalkLeft</string>
+					<key>Melee</key>
+					<string>LeftAttack</string>
+					<key>Ranged</key>
+					<string>LeftThrowing</string>
+					<key>Hurt</key>
+					<string>LeftHurt</string>
+					<key>Idle</key>
+					<string>IdleLeft</string>
+					<key>Dying</key>
+					<string>Dying</string>
+				</dict>
+			</dict>
+			<key>Melee</key>
+			<dict>
+				<key>Damage</key>
+				<integer>2</integer>
+				<key>Size</key>
+				<string>{150, 150}</string>
+				<key>ScaleTo</key>
+				<real>1.1</real>
+				<key>ScaleTime</key>
+				<real>0.5</real>
+				<key>Animation</key>
+				<string>Attacking</string>
+				<key>TimeBetweenUse</key>
+				<integer>3</integer>
+				<key>Within</key>
+				<integer>100</integer>
+				<key>RemoveOnContact</key>
+				<false/>
+			</dict>
+			<key>Ranged</key>
+			<dict>
+				<key>Projectile</key>
+				<string>Sword</string>
+				<key>TimeBetweenUse</key>
+				<integer>4</integer>
+				<key>Within</key>
+				<integer>400</integer>
+			</dict>
+			<key>Stats</key>
+			<dict>
+				<key>Health</key>
+				<integer>5</integer>
+				<key>Damage</key>
+				<integer>1</integer>
+				<key>Immunity</key>
+				<integer>1</integer>
+				<key>ImmunityWhenIdle</key>
+				<true/>
+				<key>ShowHealthWhenHit</key>
+				<true/>
+			</dict>
+			<key>Rewards</key>
+			<dict>
+				<key>Currency</key>
+				<integer>12</integer>
+				<key>XP</key>
+				<integer>100</integer>
+			</dict>
+			<key>RemoveWhen - OFF</key>
+			<dict>
+				<key>CastleKey</key>
+				<integer>1</integer>
+			</dict>
+			<key>AfterDefeat</key>
+			<dict>
+				<key>RespawnAfter</key>
+				<integer>5</integer>
+				<key>RespawnWithRewards</key>
+				<true/>
+				<key>DeleteFromLevel</key>
+				<false/>
+				<key>DeleteBody</key>
+				<false/>
+			</dict>
+			<key>Movement</key>
+			<dict>
+				<key>Within</key>
+				<integer>200</integer>
+				<key>WalkRandomly</key>
+				<true/>
+				<key>WalkTime</key>
+				<integer>2</integer>
+				<key>WalkDistance</key>
+				<integer>100</integer>
+				<key>WaitTime</key>
+				<integer>2</integer>
+				<key>RandomWaitTime - OFF</key>
+				<integer>2</integer>
+			</dict>
+		</dict>
+		<key>EvilClone2</key>
+		<dict>
+			<key>Animation</key>
+			<dict>
+				<key>Back</key>
+				<dict>
+					<key>Walk</key>
+					<string>WalkBack</string>
+					<key>Melee</key>
+					<string>BackAttack</string>
+					<key>Ranged</key>
+					<string>BackThrowing</string>
+					<key>Hurt</key>
+					<string>BackHurt</string>
+					<key>Idle</key>
+					<string>IdleBack</string>
+					<key>Dying</key>
+					<string>Dying</string>
+				</dict>
+				<key>Front</key>
+				<dict>
+					<key>Walk</key>
+					<string>WalkFront</string>
+					<key>Melee</key>
+					<string>FrontAttack</string>
+					<key>Ranged</key>
+					<string>FrontThrowing</string>
+					<key>Hurt</key>
+					<string>FrontHurt</string>
+					<key>Idle</key>
+					<string>IdleFront</string>
+					<key>Dying</key>
+					<string>Dying</string>
+				</dict>
+				<key>Right</key>
+				<dict>
+					<key>Walk</key>
+					<string>WalkRight</string>
+					<key>Melee</key>
+					<string>RightAttack</string>
+					<key>Ranged</key>
+					<string>RightThrowing</string>
+					<key>Hurt</key>
+					<string>RightHurt</string>
+					<key>Idle</key>
+					<string>IdleRight</string>
+					<key>Dying</key>
+					<string>Dying</string>
+				</dict>
+				<key>Left</key>
+				<dict>
+					<key>Walk</key>
+					<string>WalkLeft</string>
+					<key>Melee</key>
+					<string>LeftAttack</string>
+					<key>Ranged</key>
+					<string>LeftThrowing</string>
+					<key>Hurt</key>
+					<string>LeftHurt</string>
+					<key>Idle</key>
+					<string>IdleLeft</string>
+					<key>Dying</key>
+					<string>Dying</string>
+				</dict>
+			</dict>
+			<key>Melee</key>
+			<dict>
+				<key>Damage</key>
+				<integer>2</integer>
+				<key>Size</key>
+				<string>{150, 150}</string>
+				<key>ScaleTo</key>
+				<real>1.1</real>
+				<key>ScaleTime</key>
+				<real>0.5</real>
+				<key>Animation</key>
+				<string>Attacking</string>
+				<key>TimeBetweenUse</key>
+				<integer>3</integer>
+				<key>Within</key>
+				<integer>100</integer>
+				<key>RemoveOnContact</key>
+				<false/>
+			</dict>
+			<key>Ranged</key>
+			<dict>
+				<key>Projectile</key>
+				<string>Axe</string>
+				<key>TimeBetweenUse</key>
+				<integer>4</integer>
+				<key>Within</key>
+				<integer>400</integer>
+			</dict>
+			<key>Stats</key>
+			<dict>
+				<key>Health</key>
+				<integer>5</integer>
+				<key>Damage</key>
+				<integer>1</integer>
+				<key>Immunity</key>
+				<integer>1</integer>
+				<key>ImmunityWhenIdle</key>
+				<true/>
+			</dict>
+			<key>Rewards</key>
+			<dict>
+				<key>Currency</key>
+				<integer>12</integer>
+				<key>XP</key>
+				<integer>2</integer>
+			</dict>
+			<key>RemoveWhen - OFF</key>
+			<dict>
+				<key>CastleKey</key>
+				<integer>1</integer>
+			</dict>
+			<key>AfterDefeat</key>
+			<dict>
+				<key>RespawnAfter</key>
+				<integer>5</integer>
+				<key>RespawnWithRewards</key>
+				<true/>
+				<key>DeleteFromLevel</key>
+				<false/>
+				<key>DeleteBody</key>
+				<false/>
+			</dict>
+			<key>Movement</key>
+			<dict>
+				<key>Within</key>
+				<integer>300</integer>
+				<key>Speed</key>
+				<integer>1</integer>
+				<key>FollowPlayer</key>
+				<true/>
+			</dict>
+		</dict>
+		<key>EvilClone3</key>
+		<dict>
+			<key>Animation</key>
+			<dict>
+				<key>Back</key>
+				<dict>
+					<key>Walk</key>
+					<string>WalkBack</string>
+					<key>Melee</key>
+					<string>BackAttack</string>
+					<key>Ranged</key>
+					<string>BackThrowing</string>
+					<key>Hurt</key>
+					<string>BackHurt</string>
+					<key>Idle</key>
+					<string>IdleBack</string>
+					<key>Dying</key>
+					<string>Dying</string>
+				</dict>
+				<key>Front</key>
+				<dict>
+					<key>Walk</key>
+					<string>WalkFront</string>
+					<key>Melee</key>
+					<string>FrontAttack</string>
+					<key>Ranged</key>
+					<string>FrontThrowing</string>
+					<key>Hurt</key>
+					<string>FrontHurt</string>
+					<key>Idle</key>
+					<string>IdleFront</string>
+					<key>Dying</key>
+					<string>Dying</string>
+				</dict>
+				<key>Right</key>
+				<dict>
+					<key>Walk</key>
+					<string>WalkRight</string>
+					<key>Melee</key>
+					<string>RightAttack</string>
+					<key>Ranged</key>
+					<string>RightThrowing</string>
+					<key>Hurt</key>
+					<string>RightHurt</string>
+					<key>Idle</key>
+					<string>IdleRight</string>
+					<key>Dying</key>
+					<string>Dying</string>
+				</dict>
+				<key>Left</key>
+				<dict>
+					<key>Walk</key>
+					<string>WalkLeft</string>
+					<key>Melee</key>
+					<string>LeftAttack</string>
+					<key>Ranged</key>
+					<string>LeftThrowing</string>
+					<key>Hurt</key>
+					<string>LeftHurt</string>
+					<key>Idle</key>
+					<string>IdleLeft</string>
+					<key>Dying</key>
+					<string>Dying</string>
+				</dict>
+			</dict>
+			<key>Melee</key>
+			<dict>
+				<key>Damage</key>
+				<integer>2</integer>
+				<key>Size</key>
+				<string>{150, 150}</string>
+				<key>ScaleTo</key>
+				<real>1.1</real>
+				<key>ScaleTime</key>
+				<real>0.5</real>
+				<key>Animation</key>
+				<string>Attacking</string>
+				<key>TimeBetweenUse</key>
+				<integer>3</integer>
+				<key>Within</key>
+				<integer>100</integer>
+				<key>RemoveOnContact</key>
+				<false/>
+			</dict>
+			<key>Ranged</key>
+			<dict>
+				<key>Projectile</key>
+				<string>Sword</string>
+				<key>TimeBetweenUse</key>
+				<integer>4</integer>
+				<key>Within</key>
+				<integer>400</integer>
+			</dict>
+			<key>Stats</key>
+			<dict>
+				<key>Health</key>
+				<integer>5</integer>
+				<key>Damage</key>
+				<integer>1</integer>
+				<key>Immunity</key>
+				<integer>1</integer>
+				<key>ImmunityWhenIdle</key>
+				<true/>
+			</dict>
+			<key>Rewards</key>
+			<dict>
+				<key>Currency</key>
+				<integer>12</integer>
+				<key>XP</key>
+				<integer>2</integer>
+			</dict>
+			<key>RemoveWhen - OFF</key>
+			<dict>
+				<key>CastleKey</key>
+				<integer>1</integer>
+			</dict>
+			<key>AfterDefeat</key>
+			<dict>
+				<key>RespawnAfter</key>
+				<integer>5</integer>
+				<key>RespawnWithRewards</key>
+				<true/>
+				<key>DeleteFromLevel</key>
+				<false/>
+				<key>DeleteBody</key>
+				<false/>
+			</dict>
+			<key>Movement</key>
+			<dict>
+				<key>Within</key>
+				<integer>200</integer>
+				<key>Actions</key>
+				<array>
+					<string>EnemyWalk</string>
+					<string>EnemyWalk2</string>
+				</array>
+			</dict>
+		</dict>
+	</dict>
 	<key>Inventory</key>
 	<dict>
 		<key>Diamond</key>
